--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <h1 class="العناوين">معرض الأعمال</h1>
         <div class="بطاقات">
             <div class="بطاقة">
-                <a href="../CV-site/CV_HTML-Ziad_Abdulkarim.html" target="_blank">
+                <a href="https://ziadabdulkarim.github.io/my-website/" target="_blank">
                 <div class="img">
                     <img src="Images/CV-site.png">
                     <h2>CV site</h2>
@@ -154,5 +154,6 @@
     </section>
 
 </body>
+
 
 </html>
