--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta content="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="Description" content="م.زياد عبدالكريم ، مصمم ومطور مواقع ويب" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -79,7 +80,7 @@
         <h1 class="العناوين">معرض الأعمال</h1>
         <div class="بطاقات">
             <div class="بطاقة">
-                <a href="https://ziadabdulkarim.github.io/my-website/" target="_blank">
+                <a href="../CV-site/CV_HTML-Ziad_Abdulkarim.html" target="_blank">
                 <div class="img">
                     <img src="Images/CV-site.png">
                     <h2>CV site</h2>
@@ -154,6 +155,5 @@
     </section>
 
 </body>
-
 
 </html>
