--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="profile-picture"></div>
             <h1>Ziad Abdulkarim</h1>
             <p>Information Technology Graduate</p>
-            <a href="CV-Ziad_Abdulkarim.pdf" download class="btn-download">Download My CV (PDF)</a>
+            <a href="assets/CV-Ziad_Abdulkarim.pdf" download class="btn-download">Download My CV (PDF)</a>
         </div>
 
         <div class="profile-content">
